# fastapi-actionguard

./: .gitignore  NOTICE  README.md  README.pl.md  pyproject.toml
.github/workflows/: publish.yml
src/pl/afya/actionguard/: __init__.py  audit.py  decorator.py  discovery.py  enforcement.py  groups.py  models.py  policy.py  registry.py
tests/: test_actionguard.py  test_audit.py  test_endpoints.py  test_enforcement.py  test_groups.py  test_policy.py
