[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pl-afya-actionguard"
version = "0.1.3"
description = "Lightweight, declarative permission framework for FastAPI (RBAC + ABAC + custom policies)."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Marcin Chuć", email = "marcin@afya.pl" }]
keywords = ["fastapi", "permissions", "rbac", "abac", "authorization", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Kept for `pip install ".[test]"` compatibility; uv users see [dependency-groups].
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://orcid.org/0000-0002-8430-9763"
Source = "https://github.com/mchuc/fastapi-actionguard"

# uv-native development dependencies (PEP 735). Installed by `uv sync`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pl"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
consider_namespace_packages = true
